--- a/examples/2/index.html
+++ b/examples/2/index.html
@@ -21,7 +21,7 @@
 	<script>
 		//debugger;
 		var el = document.getElementById('ellipsis');
-		var ellipsis = new Ellipsis(el).set();
+		var ellipsis = new Ellipsis(el).calc().set();
 	</script>
 </body>
 </html>
