--- a/examples/1/index.html
+++ b/examples/1/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Ellipsis Test 1</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="../../src/ellipsis.js"></script>
+	<script src="../../lib/ellipsis.js"></script>
 </head>
 <body>
 		<div class="container container-1 js-ellipsis">
