Fix paths to lib in examples :/

--- a/examples/single-line/index.html
+++ b/examples/single-line/index.html
@@ -18,7 +18,7 @@
 		}
 
 	</style>
-	<script src="../../lib/ellipsis.js"></script>
+	<script src="../../lib/index.js"></script>
 </head>
 <body>
 		<div class="container container-1 js-ellipsis">
