Add ms vendor support

--- a/examples/single-line/index.html
+++ b/examples/single-line/index.html
@@ -11,10 +11,11 @@
 		}
 
 		.container {
-			height: 20px;
+			height: 10px;
 			font: 16px/20px sans-serif;
 			-webkit-column-count: 2;
-			-moz-column-count: 2;
+			   -moz-column-count: 2;
+					    column-count: 2;
 		}
 
 	</style>
